force-app/main/default/objects/Lead/fields/Estimated_Security_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Security_Maturity__c</fullName>
    <label>Estimated Security Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>