force-app/main/default/objects/Lead/fields/Interested_Service__c.field-meta.xml
<CustomField>
    <fullName>Interested_Service__c</fullName>
    <label>Interested Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Service_Category</valueSetName>
    </valueSet>
</CustomField>